miniextendr-macros/tests/ui/derive_dataframe_enum_nested_enum_no_derive.stderr
warning: unexpected `cfg` condition value: `rayon`
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:12:10
   |
12 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^
   |
   = note: expected values for `feature` are: `default-coerce`, `default-r6`, `default-s7`, `default-strict`, `default-worker`, `doc-lint`, and `vctrs`
   = note: using a cfg inside a derive macro will use the cfgs from the destination crate and not the ones from the defining crate
   = help: try referring to `DataFrameRow` crate for guidance on how handle this unexpected cfg
   = help: the derive macro `DataFrameRow` may come from an old version of the `miniextendr_macros` crate, try updating your dependency with `cargo update -p miniextendr_macros`
   = note: see <https://doc.rust-lang.org/nightly/rustc/check-cfg/cargo-specifics.html> for more information about checking conditional configuration
   = note: `#[warn(unexpected_cfgs)]` on by default
   = note: this warning originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no variant or associated item named `to_dataframe` found for enum `Status` in the current scope
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:12:10
   |
 7 | enum Status {
   | ----------- variant or associated item `to_dataframe` not found for this enum
...
12 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^ variant or associated item not found in `Status`
   |
   = note: this error originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait `DataFrameRow` is not implemented for `Status`
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:15:32
   |
15 |     Tracked { id: i32, status: Status },
   |                                ^^^^^^ add `#[derive(DataFrameRow)]` to `Status`, annotate the field with `#[dataframe(as_list)]` to keep it as an opaque list-column, or annotate with `#[dataframe(as_factor)]` for unit-only enums
   |
help: the trait `DataFrameRow` is not implemented for `Status`
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:7:1
   |
 7 | enum Status {
   | ^^^^^^^^^^^
   = note: struct- and enum-typed variant fields are flattened by default into prefixed columns; the inner type must implement `DataFrameRow` for this to work
help: the trait `DataFrameRow` is implemented for `Outer`
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:12:10
   |
12 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^
note: required by a bound in `_assert_inner_is_dataframe_row`
  --> tests/ui/derive_dataframe_enum_nested_enum_no_derive.rs:12:10
   |
12 | #[derive(DataFrameRow)]
   |          ^^^^^^^^^^^^ required by this bound in `_assert_inner_is_dataframe_row`
   = note: this error originates in the derive macro `DataFrameRow` (in Nightly builds, run with -Z macro-backtrace for more info)
